# Blynd

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: windows-tauri-build.yml
services/remote-brain/: .env.example  README.md  pyproject.toml
services/remote-brain/app/: blender_remote.py  config.py  main.py  providers.py  upstream_blender_mcp.py
services/remote-brain/scripts/: sync_upstream_assets.sh
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: blender_mcp_addon.py
src-tauri/src/: lib.rs  main.rs
src/lib/: ai.ts  supabase.ts  tauri.ts
