[project]
name = "blender-ai-remote-brain"
version = "0.1.0"
description = "Remote prompt-to-Blender-code service that reuses blender-mcp strategy"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "openai>=1.40.0",
  "anthropic>=0.34.0"
]

[dependency-groups]
dev = []
